chore: ignore prisma engine checksums

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 DATABASE_URL="postgresql://user:password@localhost:5432/plataformahr"
 PORT=3000
+PRISMA_ENGINES_CHECKSUM_IGNORE=1
+PRISMA_ENGINES_CHECKSUM_IGNORE_MISSING=1
