--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "vitest run",
-    "migrate": "prisma migrate dev",
-    "seed": "prisma db seed"
+    "migrate": "cross-env PRISMA_ENGINES_CHECKSUM_IGNORE=1 PRISMA_ENGINES_CHECKSUM_IGNORE_MISSING=1 prisma migrate dev",
+    "seed": "cross-env PRISMA_ENGINES_CHECKSUM_IGNORE=1 PRISMA_ENGINES_CHECKSUM_IGNORE_MISSING=1 prisma db seed"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/express": "^5.0.3",
     "@types/node": "^24.3.0",
+    "cross-env": "^10.0.0",
     "prisma": "^6.14.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
